// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`middle-comment.yml 1`] = `
!!str # comment
hello
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!str # comment
hello

`;

exports[`middle-comments.yml 1`] = `
!!str # comment 1
# comment 2
hello
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!str
# comment 1
# comment 2
hello

`;

exports[`true.yml 1`] = `
hello
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
hello

`;

exports[`verbatim.yml 1`] = `
!<hello> hello
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!<hello> hello

`;
